--- a/carrental/src/main/resources/application.yml
+++ b/carrental/src/main/resources/application.yml
@@ -2,12 +2,12 @@ spring:
   datasource:
     platform: postgres
     url: jdbc:postgresql://localhost:5432/postgres
-    username: CAR_RENTAL_ACCOUNTING_ADMIN
-    password: CAR_RENTAL_ACCOUNTING_LOCAL
+    username: CAR_RENTAL_ADMIN
+    password: CAR_RENTAL_LOCAL
   jpa:
     database: POSTGRESQL
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     open-in-view: false
   database:
     driverClassName: org.postgresql.Driver
