Add appplication.name to the car rental module

--- a/carrental/src/main/resources/application.yml
+++ b/carrental/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: carrental
   datasource:
     platform: postgres
     url: jdbc:postgresql://localhost:5432/postgres
