Add swagger documentation to the add car flow

--- a/carrental/src/main/resources/application.yml
+++ b/carrental/src/main/resources/application.yml
@@ -19,6 +19,9 @@ spring:
   schemas: public
   user: "CAR_RENTAL_ADMIN"
   password: "CAR_RENTAL_LOCAL"
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
 
 server:
